// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/note-state-indicator => should render an appropriate message if current note state indicates loading 1`] = `
<div
  class="note-state-indicator note-state-indicator_visible"
>
  <div
    class="note-state-indicator__content"
  >
    <ufo-rocks_icon
      iconsize="m"
    />
    <span
      class="note-state-indicator__text"
    >
      Заметка загружается
    </span>
  </div>
</div>
`;

exports[`components/note-state-indicator => should render an appropriate message if current note state indicates saving 1`] = `
<div
  class="note-state-indicator note-state-indicator_visible"
>
  <div
    class="note-state-indicator__content"
  >
    <ufo-rocks_icon
      iconsize="m"
    />
    <span
      class="note-state-indicator__text"
    >
      Заметка сохраняется
    </span>
  </div>
</div>
`;

exports[`components/note-state-indicator => should render an appropriate message if current note state indicates size limit excess 1`] = `
<div
  class="note-state-indicator note-state-indicator_visible note-state-indicator_limit-exceeded"
>
  <div
    class="note-state-indicator__content"
  >
    <ufo-rocks_icon
      iconsize="m"
    />
    <span
      class="note-state-indicator__text"
    >
      Заметка вышла слишком длинной: можно максимум 50 000 знаков, а сейчас их 0.
    </span>
  </div>
</div>
`;
